# ArchitectureParallelSystems

./: .gitignore
lab_1/: CMakeLists.txt  MultiplyMatrix.hpp  main.cxx
lab_2/: CMakeLists.txt  Sort.hpp  main.cxx
lab_3/: LinerSystem.hpp  LinerSystemParallel.hpp  main.cxx
lab_4/: CMakeLists.txt  LinerSystem.hpp  LinerSystemParallel.hpp  main  main.cxx
lab_5/: LinerSystem.hpp  LinerSystemParallel.hpp  main.cxx
